tests/ui/conf_bad_arg.rs
// error-pattern: `conf_file` must be a named value


#![plugin(clippy(conf_file))]

fn main() {}
